--- a/app/memory.html
+++ b/app/memory.html
@@ -4,56 +4,28 @@
 <head>
     <meta charset="utf-8"/>
     <title>AngularJS memory game</title>
-
-    <style type="text/css">
-
-        body { width:90vw; height:90vh; padding:0; margin:0; font-family:Skia,Verdana,sans-serif; text-align:center; }
-
-        header.span { display:table-cell; }
-
-        table#speelveld { table-layout:fixed;   margin:0 auto; }
-        table#speelveld td { cursor:pointer; text-align:center; color:white; font-size:large; font-weight:bold; }
-
-        table#meta { position:fixed; right:4vw; top:10vw;  width: 25vw; height:70vh; }
-        table#meta td { vertical-align:top; text-align:left; padding:1%; }
-
-        @media only screen and (orientation:landscape) {
-            table#speelveld { width:80vh; height:80vh; border-spacing:1vh;}
-        }
-
-
-        @media only screen and (orientation:portrait) {
-            table#speelveld { width:70vw; height:70vw; border-spacing:1vw;}
-        }
-        td.inactive { background-color:red; }
-        td.active { background-color:green; }
-        td.found{ background-color:purple; cursor:default; }
-
-        button {width: 100px}
-
-        #myTime {
-            position: relative;
-            width: 200px;
-            height: 30px;
-            background-color: #ddd;
-        }
-
-        #timeLeft {
-            width: 185px;
-            height: 20px;
-            background-color: #4CAF50;
-        }
-    </style>
-
+    <link rel="stylesheet" type="text/css" href="memory.css">
 </head>
 
-<body xx="initGame(6);">
+<body ng-controller="boardCreator" ng-init = "initGame(6)">
 <header>
     <h2>Javascript memory</h2>
     <div>Verlopen tijd: <span id="tijd">0</span> seconden.<br/>
         Gevonden kaart-paren: <span id="gevonden">0</span><br>
         Resterende toontijd: <br>
         <button id="myTime"><div id="timeLeft"></div></button><br/>
+    </div>
+
+    <div class="gameGrid" ng-controller="boardInteraction">
+        <div class="gameRows" ng-repeat="row in gameRows">
+            <div class="gameCols" ng-repeat="col in gameCols">
+                <div class="gameField" value="inactive">
+                    <span class="gameValue" ng-click="clickField(gameGrid[row][col])">
+                        {{gameGrid[row][col]}}
+                    </span>
+               </div>
+            </div>
+        </div>
     </div>
 </header>
 
@@ -83,33 +55,23 @@
             </select>
             </td></tr>
             <tr><td>
-                <button class="jscolor
-	    	{valueElement:'valueinactive', 
-	    	 styleElement:'styleInactive', 
-	    	 onFineChange:'setColor(\'td.inactive\')'}">
+                <button class="jscolor{valueElement:'valueinactive', styleElement:'styleInactive', onFineChange:'change()'}">
+
                     Kaartkleur
                 </button>
-                <xxxx type="hidden" id="valueinactive" value="ff0000"><xxxx id="styleInactive">
+                <input type="hidden" id="valueinactive" value="ff0000"><input id="styleInactive">
                     <br>
-                    <button class="jscolor
-	    	{valueElement:'valueactive', 
-	    	 styleElement:'styleActive', 
-	    	 onFineChange:'setColor(\'td.active\')'}">
+                    <button class="jscolor{valueElement:'valueactive', styleElement:'styleActive'}">
                         Open
                     </button>
-                    <xxxx type="hidden" id="valueactive" value="008C00"><xxxx id="styleActive">
+                    <input type="hidden" id="valueactive" value="008C00"><input id="styleActive">
                         <br>
-                        <button class="jscolor
-	    	{valueElement:'valuefound', 
-	    	 styleElement:'styleFound', 
-	    	 onFineChange:'setColor(\'td.found\')'}">
+                        <button class="jscolor{valueElement:'valuefound', styleElement:'styleFound'}">
                             Gevonden
                         </button>
-                        <xxxx type="hidden" id="valuefound" value="800080"><xxxx id="styleFound">
+                        <input type="hidden" id="valuefound" value="800080"><input id="styleFound">
             </td></tr>
             <tr><td>
-                <xxxx>
-                </xxxx>
                 <button id="opnieuw">Nieuw Spel</button>
             </td></tr>
         </table>
@@ -117,8 +79,14 @@
     </div>
 </div>
 
+<!-- Load the JQuery Library -->
+<script src="jquery-3.2.1.min.js"></script>
+
 <!-- Load the AngularJS library -->
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+
+<!-- Load the jscolor Library-->
+<script src="jscolor.min.js"></script>
 
 <!-- Load the JS Module -->
 <script src="memory.js"></script>
